--- a/App/public/scss/style.scss
+++ b/App/public/scss/style.scss
@@ -19,8 +19,9 @@ $primary-color: #fae5e5;
 $form-input-color: #333333;
 $primary-radius: 4px;
 body {
-  font-family: 'PT Sans', helvetica, Arial, verdana, sans-serif;
-  background: $page-background-color url('../images/bg_stars.svg') no-repeat top left;
+  font-family: "PT Sans", helvetica, Arial, verdana, sans-serif;
+  background: $page-background-color url("../images/bg_stars.svg") no-repeat top
+    left;
   font-size: 18px;
   line-height: 1;
   margin: 0;
@@ -38,7 +39,8 @@ body {
 }
 
 //Font
-h1, h2 {
+h1,
+h2 {
   margin: 63px 0 20px 0;
   font-size: 1.8em;
   text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
@@ -80,7 +82,8 @@ a.delete-all {
 }
 
 //List
-ul, ol {
+ul,
+ol {
   line-height: 1.5;
   list-style: none;
   padding: 0;
@@ -88,7 +91,6 @@ ul, ol {
 
   li {
     padding: 3px 10px;
-
   }
 }
 
@@ -106,7 +108,7 @@ ul, ol {
     &:hover {
       color: $primary-btn-background;
       background: $primary-color;
-      transition: all .3s ease-out;
+      transition: all 0.3s ease-out;
       cursor: pointer;
 
       .delete {
@@ -140,10 +142,8 @@ ul, ol {
   }
 
   &.show {
-
     display: flex;
   }
-
 }
 
 .rolling-list {
@@ -169,9 +169,11 @@ ul, ol {
   }
 }
 
-input[type="text"], input[type="number"], .btn {
+input[type="text"],
+input[type="number"],
+.btn {
   padding: 8px 10px;
-  font-size: .9em;
+  font-size: 0.9em;
   margin: 0;
   background: $primary-color;
   border: 0;
@@ -179,7 +181,8 @@ input[type="text"], input[type="number"], .btn {
   outline: none;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"],
+input[type="number"] {
   width: 50%;
 
   &:hover {
@@ -192,7 +195,7 @@ input[type="text"], input[type="number"] {
   }
 
   @media only screen and (max-width: 480px) {
-    width: 78%
+    width: 78%;
   }
 }
 
@@ -210,7 +213,6 @@ input[type="checkbox"] {
     }
   }
 }
-
 
 .btn {
   padding: 8px 15px;
@@ -248,7 +250,7 @@ input[type="checkbox"] {
 
 //Specific btn
 .btn-start {
-  transition: backgrund .5s ease-out, box-shadow .5 ease-out;
+  transition: backgrund 0.5s ease-out, box-shadow 0.5 ease-out;
   box-shadow: 0 1px 10px 0 $positive-btn-focus-background;
   text-shadow: 0 1px 3px $positive-btn-focus-background;
 
@@ -256,8 +258,9 @@ input[type="checkbox"] {
     box-shadow: 0 1px 3px 0 $positive-btn-background;
   }
 
-  .fa, .text {
-    transition: all .5s;
+  .fa,
+  .text {
+    transition: all 0.5s;
   }
 }
 
@@ -282,7 +285,7 @@ input[type="checkbox"] {
   padding: 2px 10px 6px 10px;
   border-radius: $primary-radius;
   background: $tooltip-background-color;
-  width: auto;
+  width: 60px;
 
   .arrow-up {
     width: 0;
@@ -301,19 +304,18 @@ input[type="checkbox"] {
   }
 }
 
-
 //Logo
 .logo {
   margin: 10px 0 0 20px;
-  -vendor-animation-duration: .5s;
+  -vendor-animation-duration: 0.5s;
   -vendor-animation-delay: 1s;
   -vendor-animation-iteration-count: infinite;
   width: 224px;
   height: 91px;
 
   img {
-    width: 205px;
-    height: 83px;
+    width: 600px;
+    height: 450px;
   }
 
   :hover {
@@ -321,14 +323,14 @@ input[type="checkbox"] {
   }
 
   .tooltip {
-    left: 140px;
-    top: 0;
+    left: 500px;
+    top: 50px;
   }
 }
 
 //Main Container
 .main-container {
-  -vendor-animation-duration: .5s;
+  -vendor-animation-duration: 0.5s;
   -vendor-animation-delay: 3s;
   -vendor-animation-iteration-count: infinite;
   width: 100%;
@@ -337,23 +339,47 @@ input[type="checkbox"] {
 
 .mask {
   //  background: $page-background-color;
-  opacity: .95;
+  opacity: 0.95;
   position: fixed;
   width: 100%;
 }
 
 #mask-top {
-  background: -moz-linear-gradient(top, rgba(243, 68, 51, 0.95) 90%, rgba(243, 68, 51, 0) 100%); /* FF3.6+ */
-  background: -webkit-linear-gradient(top, rgba(243, 68, 51, 0.95) 90%, rgba(243, 68, 51, 0) 100%); /* Chrome10+,Safari5.1+ */
-  background: linear-gradient(to bottom, rgba(243, 68, 51, 0.95) 90%, rgba(243, 68, 51, 0) 100%); /* W3C */
+  background: -moz-linear-gradient(
+    top,
+    rgba(243, 68, 51, 0.95) 90%,
+    rgba(243, 68, 51, 0) 100%
+  ); /* FF3.6+ */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(243, 68, 51, 0.95) 90%,
+    rgba(243, 68, 51, 0) 100%
+  ); /* Chrome10+,Safari5.1+ */
+  background: linear-gradient(
+    to bottom,
+    rgba(243, 68, 51, 0.95) 90%,
+    rgba(243, 68, 51, 0) 100%
+  ); /* W3C */
   top: 0;
   left: 0;
 }
 
 #mask-bottom {
-  background: -moz-linear-gradient(top, rgba(243, 68, 51, 0) 0%, rgba(243, 68, 51, 0.95) 15%); /* FF3.6+ */
-  background: -webkit-linear-gradient(top, rgba(243, 68, 51, 0) 0%, rgba(243, 68, 51, 0.95) 15%); /* Chrome10+,Safari5.1+ */
-  background: linear-gradient(to bottom, rgba(243, 68, 51, 0) 0%, rgba(243, 68, 51, 0.95) 15%); /* W3C */
+  background: -moz-linear-gradient(
+    top,
+    rgba(243, 68, 51, 0) 0%,
+    rgba(243, 68, 51, 0.95) 15%
+  ); /* FF3.6+ */
+  background: -webkit-linear-gradient(
+    top,
+    rgba(243, 68, 51, 0) 0%,
+    rgba(243, 68, 51, 0.95) 15%
+  ); /* Chrome10+,Safari5.1+ */
+  background: linear-gradient(
+    to bottom,
+    rgba(243, 68, 51, 0) 0%,
+    rgba(243, 68, 51, 0.95) 15%
+  ); /* W3C */
   height: 100px;
   top: 0;
   left: 0;
@@ -361,10 +387,10 @@ input[type="checkbox"] {
 
 @keyframes placeHolderShimmer {
   0% {
-    background-position: -468px 0
+    background-position: -468px 0;
   }
   100% {
-    background-position: 468px 0
+    background-position: 468px 0;
   }
 }
 
@@ -394,7 +420,8 @@ input[type="checkbox"] {
   .logo {
     margin-left: 0;
   }
-  h1, h2 {
+  h1,
+  h2 {
     margin: 5px 0 10px 5px;
   }
   .btn-start {
